--- a/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery_page.html
+++ b/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery_page.html
@@ -5,7 +5,7 @@
     html,body {
         height: 100%;
         font-family: "黑体";
-        background: #92191e!important;
+        background: #3A3A3A !important;
     }
     .wui-hidden {
         display: none;
@@ -92,11 +92,37 @@
             height: 13rem;
         }  
     }
+    .wui-guide{
+        width: 100%;
+        height: 100%;
+        background: url(/termite_static/img/component/scanlottery/scanlottery_guide.jpg) no-repeat;
+        background-size: 100% auto;
+        position: relative;
+        background-color: #1C4A98;
+    }
+    .wui-guide .wui-guide-scan-title{
+        height: 11%;
+        width: 70%;
+        position: absolute;
+        top: 39%;
+        left: 15%;
+        background: url(/termite_static/img/component/scanlottery/scan_title.png) no-repeat;
+        background-size: 100% auto;
+    }
+    .wui-guide .wui-guide-scan{
+        height: 20%;
+        width: 32%;
+        position: absolute;
+        top: 51%;
+        left: 34%;
+        background: url(/termite_static/img/component/scanlottery/scan.png) no-repeat;
+        background-size: 100% auto;
+    }
 </style>
 {% endblock %}
 
 {% block content-panel %}
-<div class="wui-scanlottery-page wui-hidden ">
+<div class="wui-scanlottery-page wui-hidden wa-scanlottery-page">
     <div class="wui-scanlottery-title"></div>
     <div class="wui-scanlottery-container wa-scanlottery-container">
         <div> 
@@ -117,14 +143,8 @@
     </div>
 </div>
 <div class="wui-guide wa-guide">
-    <h1 class="wui-i-title">扫一扫，码上有好礼</h1>
-    <button type="button" class="wui-i-scanBtn wa-scanBtn">点我扫码</button>
-    <div>
-        <p>注：</p>
-        <p>1、点击扫码按钮，将商品上方的防伪码放入识别框内，识别后参与抽奖。</p>
-        <p>2、一个防伪码只有一次抽奖机会，100%中奖。</p>
-        <p>3、抽奖完成后在个人中心可查看奖品内容，抽奖的信息要真实有效才能领到奖品哦。</p>
-    </div>
+    <div class="wui-guide-scan-title"></div>
+    <div class="wui-guide-scan wa-guide-scan"></div>
 </div>
 {% endblock %}
 
@@ -140,9 +160,9 @@
 
         //扫码
         wx.ready(function(){
-            $('.wa-scanBtn').on('click', scanQrcode);
+            $('.wa-guide-scan').on('click' ,scanQrcode);
         });
-        
+
         //立即抽奖
         $('.wa-submit').on('click', function(){
             var name = $('.wa-name').val();
@@ -194,10 +214,12 @@
             needResult: 1, // 默认为0，扫描结果由微信处理，1则直接返回扫描结果，
             scanType: ["qrCode"], // 可以指定扫二维码还是一维码，默认二者都有
             success: function (res) {
+                console.log(33333)
                 var result = res.resultStr; // 当needResult 为 1 时，扫码返回的结果
                 scanCode = result.substr(result.length - 20);
                 $('.wa-guide').hide();
                 $('.wa-scanlottery-page').show();
+                $('body').css('background-color', '#92191e !important');
             }
         });
     }
