--- a/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery_page.html
+++ b/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery_page.html
@@ -5,7 +5,7 @@
     html,body {
         height: 100%;
         font-family: "黑体";
-        background: #3A3A3A !important;
+        background: #92191e !important;
     }
     .wui-hidden {
         display: none;
@@ -100,15 +100,6 @@
         position: relative;
         background-color: #1C4A98;
     }
-    .wui-guide .wui-guide-scan-title{
-        height: 11%;
-        width: 70%;
-        position: absolute;
-        top: 39%;
-        left: 15%;
-        background: url(/termite_static/img/component/scanlottery/scan_title.png) no-repeat;
-        background-size: 100% auto;
-    }
     .wui-guide .wui-guide-scan{
         height: 20%;
         width: 32%;
@@ -116,6 +107,15 @@
         top: 51%;
         left: 34%;
         background: url(/termite_static/img/component/scanlottery/scan.png) no-repeat;
+        background-size: 100% auto;
+    }
+    .wui-guide .wui-guide-scan-desc{
+        height: 20%;
+        width: 70%;
+        position: absolute;
+        top: 70%;
+        left: 14%;
+        background: url(/termite_static/img/component/scanlottery/scan_desc.png) no-repeat;
         background-size: 100% auto;
     }
 </style>
@@ -143,8 +143,8 @@
     </div>
 </div>
 <div class="wui-guide wa-guide">
-    <div class="wui-guide-scan-title"></div>
     <div class="wui-guide-scan wa-guide-scan"></div>
+    <div class="wui-guide-scan-desc"></div>
 </div>
 {% endblock %}
 
@@ -219,7 +219,6 @@
                 scanCode = result.substr(result.length - 20);
                 $('.wa-guide').hide();
                 $('.wa-scanlottery-page').show();
-                $('body').css('background-color', '#92191e !important');
             }
         });
     }
