--- a/weapp/apps/customerized_apps/scanlottery/templates/editor/scanlottery_participances.html
+++ b/weapp/apps/customerized_apps/scanlottery/templates/editor/scanlottery_participances.html
@@ -122,6 +122,7 @@
 		<thead>
 			<tr>
 				<th>用户名</th>
+				<th>姓名</th>
 				<th>手机号</th>
 				<th>获奖等级</th>
 				<th>奖品名称</th>
@@ -139,6 +140,9 @@
 				>
 					<img src="${item.participant_icon}" />
 					{{html item.participant_name}}
+				</td>
+				<td>
+					${item.name}
 				</td>
 				<td>
 					${item.tel}
