--- a/weapp/apps/customerized_apps/scanlottery/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/scanlottery/templates/editor/workbench.html
@@ -185,6 +185,33 @@
             pageManagerView.activePage(page);
           }
 
+            W.Broadcaster.on("image_dialog_select:deleteImage", function(options){
+				var comp = W.component.CID2COMPONENT[options.cid],
+					targetClass;
+				switch (options.cid){
+					case '4':
+						targetClass = '.xa-lottery-first';
+						break;
+					case '5':
+						targetClass = '.xa-lottery-second';
+						break;
+					case '6':
+						targetClass = '.xa-lottery-third';
+						break;
+					default:
+						targetClass = '.xa-lottery-first';
+						break;
+				}
+
+				var $target = $('#phoneIFrame').contents().find(targetClass);//找到子frame中的相应元素
+				var defaultPosition = $target.attr('defaultPosition');
+				$target.html("<span style='background-position:"+ defaultPosition + ";'></span>");
+
+				comp.model.set({
+					image: ''
+				});
+			});
+
           W.Broadcaster.on('page:rendered', function () {
               if ("{{ scanlottery.status_text }}" == "进行中" ){
                   W.getApi().call({
