--- a/weapp/termite/static/v4/css/widget.css
+++ b/weapp/termite/static/v4/css/widget.css
@@ -1806,13 +1806,14 @@ div[data-type='wepage.specialTemplate_group'] .xui-designPage-actionPanel{
 
 /*针对前端渲染，商品模块，图片无法是适应div的补丁*/
 /*一大两小*/
-.wui-product .wui-block-type2.wui-card-type-0 li:nth-child(3n+1) a[class^="wui-inner-box"] .wui-inner-pic,
-.wui-product .wui-block-type2.wui-card-type-0 a[class^="wui-inner-box"] .wui-inner-pic {
+.async-component .wui-product .wui-block-type2.wui-card-type-0 li:nth-child(3n+1) a[class^="wui-inner-box"] .wui-inner-pic,
+
+.async-component .wui-product .wui-block-type2.wui-card-type-0 a[class^="wui-inner-box"] .wui-inner-pic {
     height: 0;
 }
-ul.wui-block-type2.wui-card-type-0 div.wui-inner-pic { 
+.async-component ul.wui-block-type2.wui-card-type-0 div.wui-inner-pic { 
     width: 100%; height: 0px;padding-bottom:100%; 
 }
-ul.wui-block-type2.wui-card-type-0 div.wui-inner-pic img{ 
+.async-component ul.wui-block-type2.wui-card-type-0 div.wui-inner-pic img{ 
     width: 100%;
 }
