--- a/weapp/weixin2/templates/weixin/channels/channel_distributions.html
+++ b/weapp/weixin2/templates/weixin/channels/channel_distributions.html
@@ -95,7 +95,7 @@
 							        ${qrcode.created_at}
 							    </td>
 							    <td>
-							        ${qrcode.clearing}
+							        <button type="button"><a href='/new_weixin/distribution_clearing/'>操作${qrcode.clearing}</a></button>
 							    </td>
 							    <td>
 							    <button type="button"><a href='/new_weixin/channel_distribution/?setting_id=${qrcode.id}'>修改</a></button><button type="button">查看</button>
