--- a/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery_page.html
+++ b/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery_page.html
@@ -214,11 +214,23 @@
             needResult: 1, // 默认为0，扫描结果由微信处理，1则直接返回扫描结果，
             scanType: ["qrCode"], // 可以指定扫二维码还是一维码，默认二者都有
             success: function (res) {
-                console.log(33333)
                 var result = res.resultStr; // 当needResult 为 1 时，扫码返回的结果
                 scanCode = result.substr(result.length - 20);
-                $('.wa-guide').hide();
-                $('.wa-scanlottery-page').show();
+                W.getApi().call({
+                    app: 'm/apps/scanlottery',
+                    resource: 'scan_code_test',
+                    method: 'get',
+                    args: {
+                        scan_code: scanCode
+                    },
+                    success: function(data){
+                        $('.wa-guide').hide();
+                        $('.wa-scanlottery-page').show();
+                    },
+                    error: function(resp){
+                        wuiAlert(resp.errMsg);
+                    }
+                });
             }
         });
     }
