--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -2813,6 +2813,7 @@ li.wui-selectBox-display-table {
 .wui-scanlotterydescription {
 	background: url(/termite_static/img/component/scanlottery/lottery_bg.jpg) no-repeat;
 	background-size: 100% 100%;
+	height: 434px;
 }
 .wui-scanlotteryDescription {
 	padding-top: 2px;
