--- a/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery_page.html
+++ b/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery_page.html
@@ -5,7 +5,7 @@
     html,body {
         height: 100%;
         font-family: "黑体";
-        background: #92191e !important;
+        background: #fff !important;
     }
     .wui-hidden {
         display: none;
@@ -38,7 +38,7 @@
         width: 70%;
         font-size: 1.1rem;
         outline: none;
-        background: #ff7800;
+        background: #df002e;
         font-family: "黑体";
         margin-top: 10px;
     }  
@@ -74,17 +74,52 @@
         margin-top: 2rem;
         font-size: 1rem;
         text-align: left;
-        color: #ed6b04;
+        color: #24326a;
     }
     .wui-verify-btn {
-        font-size: 1.1rem;
+        font-size: 1rem;
         height: 3rem;
         line-height: 3rem;
-        color: #3992ff;
+        color: #24326a;
         display: inline-block;
         width: 30%;
     }
+    .wui-guide{
+        width: 100%;
+        height: 100%;
+        background: url(/termite_static/img/component/scanlottery/scanlottery_guide.jpg) no-repeat;
+        background-size: 100% 100%;
+        position: relative;
+        background-color: #ffffff;
+    }
+    .wui-guide .wui-guide-top {
+        height: 54%;
+    }
+    .wui-guide .wui-guide-scan {
+        height: 19%;
+        width: 32%;
+        margin: 0 auto; 
+        background: url(/termite_static/img/component/scanlottery/scan.png) no-repeat;
+        background-size: 100% 100%;
+    }
+    .wui-guide .wui-guide-scan-desc {
+        height: 26%;
+        width: 85%;
+        margin: 0 auto; 
+        background: url(/termite_static/img/component/scanlottery/scan_desc.png) no-repeat;
+        background-size: 100% 100%;
+    }
     @media screen and (max-width: 320px) {
+        .wui-guide .wui-guide-top {
+            height: 55%;
+        }
+        .wui-guide .wui-guide-scan-desc {
+            width: 90%;
+            height: 30%;
+        }
+        .wui-guide .wui-guide-scan {
+            height: 19%;
+        }
         .wui-verify-btn {
             font-size: 1rem;
         }        
@@ -92,31 +127,26 @@
             height: 13rem;
         }  
     }
-    .wui-guide{
-        width: 100%;
-        height: 100%;
-        background: url(/termite_static/img/component/scanlottery/scanlottery_guide.jpg) no-repeat;
-        background-size: 100% auto;
-        position: relative;
-        background-color: #1C4A98;
-    }
-    .wui-guide .wui-guide-scan{
-        height: 20%;
-        width: 32%;
-        position: absolute;
-        top: 53%;
-        left: 34%;
-        background: url(/termite_static/img/component/scanlottery/scan.png) no-repeat;
-        background-size: 100% auto;
-    }
-    .wui-guide .wui-guide-scan-desc{
-        height: 20%;
-        width: 70%;
-        position: absolute;
-        top: 72%;
-        left: 14%;
-        background: url(/termite_static/img/component/scanlottery/scan_desc.png) no-repeat;
-        background-size: 100% auto;
+    @media screen and (max-width: 320px) and (max-height: 480px) {
+        body,html {
+            background: #fff!important;            
+        }
+        .wui-guide .wui-guide-top {
+            height: 60%;
+        }
+        .wui-guide .wui-guide-scan-desc {
+            width: 90%;
+            height: 33%;
+        }
+        .wui-guide .wui-guide-scan {
+            height: 22%;
+        }
+        .wui-verify-btn {
+            font-size: 1rem;
+        }        
+        .wui-scanlottery-title {
+            height: 13rem;
+        }         
     }
 </style>
 {% endblock %}
@@ -129,7 +159,7 @@
             <input type="text" placeholder="请输入姓名" class="wui-excode-input wa-name">
         </div>
         <div> 
-            <input type="text" placeholder="请输入手机号码" class="wui-phone-input wa-phone" maxlength="11">
+            <input type="text" placeholder="请输入手机号" class="wui-phone-input wa-phone" maxlength="11">
         </div>
         <div>
             <input type="text" placeholder="验证码" class="wui-verify-input wa-verify-input" maxlength="4">
@@ -143,6 +173,7 @@
     </div>
 </div>
 <div class="wui-guide wa-guide">
+    <div class="wui-guide-top"></div>
     <div class="wui-guide-scan wa-guide-scan"></div>
     <div class="wui-guide-scan-desc"></div>
 </div>
@@ -159,9 +190,9 @@
         });
 
         //扫码
-        wx.ready(function(){
+        // wx.ready(function(){
             $('.wa-guide-scan').on('click' ,scanQrcode);
-        });
+        // });
 
         //立即抽奖
         $('.wa-submit').on('click', function(){
@@ -214,11 +245,26 @@
             needResult: 1, // 默认为0，扫描结果由微信处理，1则直接返回扫描结果，
             scanType: ["qrCode"], // 可以指定扫二维码还是一维码，默认二者都有
             success: function (res) {
-                console.log(33333)
                 var result = res.resultStr; // 当needResult 为 1 时，扫码返回的结果
                 scanCode = result.substr(result.length - 20);
-                $('.wa-guide').hide();
-                $('.wa-scanlottery-page').show();
+                W.getApi().call({
+                    app: 'm/apps/scanlottery',
+                    resource: 'scan_code_test',
+                    method: 'get',
+                    args: {
+                        webapp_owner_id: W.webappOwnerId,
+                        scan_code: scanCode
+                    },
+                    success: function(data){
+                        $('.wa-guide').hide();
+                        $('.wa-scanlottery-page').show();
+                        $('html').css({background: '#a5b8dc!important'});
+                        $('body').css({background: '#a5b8dc!important'});
+                    },
+                    error: function(resp){
+                        wuiAlert(resp.errMsg);
+                    }
+                });
             }
         });
     }
