--- a/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery_page.html
+++ b/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery_page.html
@@ -221,6 +221,7 @@
                     resource: 'scan_code_test',
                     method: 'get',
                     args: {
+                        webapp_owner_id: W.webappOwnerId,
                         scan_code: scanCode
                     },
                     success: function(data){
