--- a/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery_page.html
+++ b/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery_page.html
@@ -258,6 +258,7 @@
                         $('.wa-guide').hide();
                         $('.wa-scanlottery-page').show();
                         $('html').css({background: '#a5b8dc!important'});
+                        $('body').css({background: '#a5b8dc!important'});
                     },
                     error: function(resp){
                         wuiAlert(resp.errMsg);
