--- a/weapp/static_v2/js/view/mall_product_filter_view/template.html
+++ b/weapp/static_v2/js/view/mall_product_filter_view/template.html
@@ -50,7 +50,7 @@
 
 		<div class="xui-i-item">
 		{{if mall_type == 1}}
-			<label>创建时间：</label>
+			<label>同步时间：</label>
 		{{else}}
 			<label>创建时间：</label>
 		{{/if}}
