--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -294,14 +294,23 @@
                     return;
                 }
 
-                if (isUserCenterLink(url) && W.isSubscribedMember == false) {
-                    /* 非会员显示二维码 */
-                    $('.xa-qrcodeMask').swipeMask('show');
-                } else {
+                // [微众商城]非会员可看个人中心（看购需求）
+                if ( W.webappOwnerId == 6 || W.webappOwnerId == 216 ) {
                     if( url.indexOf('http://') == 0 || url.indexOf('https://') == 0){
                         window.location.href = url;
                     }else{
                         window.location.href = "http://"+ window.location.host + url;
+                    }
+                }else{
+                    if (isUserCenterLink(url) && W.isSubscribedMember == false) {
+                        /* 非会员显示二维码 */
+                        $('.xa-qrcodeMask').swipeMask('show');
+                    } else {
+                        if( url.indexOf('http://') == 0 || url.indexOf('https://') == 0){
+                            window.location.href = url;
+                        }else{
+                            window.location.href = "http://"+ window.location.host + url;
+                        }
                     }
                 }
             });
